corrected the spacing in mobile view

--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ form .btn2 {
     .about-col-1 img {
         width: 100%;
         border-radius: 15px;
-        margin-top: 50px; /* Add margin-top to move the image down */
+        margin-top: 30px; /* Add margin-top to move the image down */
     }
 
     .layer {
